[package]
  name = "lib"
  version = "0.1.0"
  edition = "2021"

[dependencies]
  chrono = { version = "0.4", features = ["serde"] }
  ciborium = "0.2"
  ecdsa = { version = "0.16", features = [
    "pem",
    "signing",
    "verifying",
    "serde",
  ] }
  hex = "0.4"
  k256 = { version = "0.13", features = ["serde", "pem"] }
  rand = "0.8"
  serde = { version = "1", features = ["derive"] }
  sha256 = "1"
  uint = "0.10"
  uuid = { version = "1", features = ["v4", "serde"] }
